增加了验证码验证的问题，但是首次不加载

--- a/BankWeb/BankManageSystem/.settings/org.eclipse.core.resources.prefs
+++ b/BankWeb/BankManageSystem/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/bank/controller/TellerController.java=UTF-8
+encoding//src/com/bank/interceptor/LoginInterceptor.java=UTF-8
